primeiras mudanças no footer

--- a/PegadaChave/Content/Site.css
+++ b/PegadaChave/Content/Site.css
@@ -1,8 +1,8 @@
 ﻿/* Set padding to keep content from hitting the edges */
 .body-content {
     margin-top: 15px;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: 0%;
+    padding-right: 0%;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
