Adicionadas Imagens e Feito Carrousel da Home

--- a/PegadaChave/Views/Home/Index.cshtml
+++ b/PegadaChave/Views/Home/Index.cshtml
@@ -2,6 +2,42 @@
     ViewBag.Title = "Home Page";
 }
 
-<main>
-<div style="height: 1080px; background-color: rgb(75, 75, 75)"
-</main>
+<!DOCTYPE html>
+
+<html lang="pt-br">
+
+<head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    @Styles.Render("~/Content/HomeStyle.css")
+</head>
+
+<body>
+    <main>
+        <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="~/Content/Image/ImagemProdutoMasculino/CortaventoNike.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/Content/Image/ImagemProdutoMasculino/BlusaPretaLouisvuitton.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="~/Content/Image/ImagemProdutoFeminino/BlusacroppedRosaLacoste.jpg" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </main>
+
+</body>
+
+</html>
