--- a/PegadaChave/Views/Home/Index.cshtml
+++ b/PegadaChave/Views/Home/Index.cshtml
@@ -14,17 +14,17 @@
 </head>
 
 <body>
-    <main>
+    <main class="">
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="~/Content/Image/ImagemProdutoMasculino/CortaventoNike.jpg" class="d-block w-100" alt="...">
+                    <img src="~/Content/Image/ImagemProdutoMasculino/CortaventoNike.jpg" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="~/Content/Image/ImagemProdutoMasculino/BlusaPretaLouisvuitton.jpg" class="d-block w-100" alt="...">
+                    <img src="~/Content/Image/ImagemProdutoMasculino/BlusaPretaLouisvuitton.jpg" class="d-block" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="~/Content/Image/ImagemProdutoFeminino/BlusacroppedRosaLacoste.jpg" class="d-block w-100" alt="...">
+                    <img src="~/Content/Image/ImagemProdutoFeminino/BlusacroppedRosaLacoste.jpg" class="d-block" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
