Adicionando fução aos botões do header

--- a/PegadaChave/Views/Shared/_Layout.cshtml
+++ b/PegadaChave/Views/Shared/_Layout.cshtml
@@ -49,8 +49,8 @@
             </div>
         </div>
         <div class="nav-row genders-row">
-            <a href="">Masculino</a>
-            <a href="">Feminino</a>
+            <a href="@Url.Action("Index", "Products", new { genero = "masculino" })">Masculino</a>
+            <a href="@Url.Action("Index", "Products", new { genero = "feminino" })">Feminino</a>
         </div>
     </nav>
 </header>
