--- a/PegadaChave/Content/HomeStyle.css
+++ b/PegadaChave/Content/HomeStyle.css
@@ -1,6 +1,19 @@
 ﻿.carousel-item img {
-    height:100vh;
-    width:100%;
+    height: 100vh;
+    width: 100%;
     object-fit: cover;
     object-position: top center;
+    z-index:-1;
+}
+
+.chamadabotao{
+    font-size: 24px;
+}
+
+.botaohome {
+    background-color: #E1E1E138;
+    border-radius: 35px;
+    width:fit-content;
+    padding: 1vh 3vh;
+    border: 2px solid white;
 }
