--- a/PegadaChave/Views/Home/Index.cshtml
+++ b/PegadaChave/Views/Home/Index.cshtml
@@ -15,16 +15,56 @@
 
 <body>
     <main class="">
-        <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
+        <div id="carouselExample" class="carousel slide carousel-fade">
+            <div class="carousel-inner teste1">
                 <div class="carousel-item active">
-                    <img src="~/Content/Image/ImagemProdutoMasculino/CortaventoNike.jpg" class="d-block" alt="...">
+                    <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home01G.png" class="d-block" alt="...">
+                    <div class="carousel-caption d-block">
+                        <h5 class="chamadabotao">A Favela Venceu</h5>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="~/Content/Image/ImagemProdutoMasculino/BlusaPretaLouisvuitton.jpg" class="d-block" alt="...">
+                    <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home02G.png" class="d-block" alt="...">
+                    <div class="carousel-caption d-block">
+                        <h5 class="chamadabotao">Vista-se com Atitude</h5>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                    </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="~/Content/Image/ImagemProdutoFeminino/BlusacroppedRosaLacoste.jpg" class="d-block" alt="...">
+                    <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home07G.png" class="d-block" alt="...">
+                    <div class="carousel-caption d-block">
+                        <h5 class="chamadabotao">Ostente Seu Estilo Único</h5>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home03G.png" class="d-block" alt="...">
+                    <div class="carousel-caption d-block">
+                        <h5 class="chamadabotao">O Gueto Ostenta</h5>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home04G.png" class="d-block" alt="...">
+                    <div class="carousel-caption d-block">
+                        <h5 class="chamadabotao">Roupas que Falam por nós</h5>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home05G.png" class="d-block" alt="...">
+                    <div class="carousel-caption d-block">
+                        <h5 class="chamadabotao">Moda de Quebrada</h5>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="~/Content/Image/ImagemAuxiliarProjeto/HOME/Home06G.png" class="d-block" alt="...">
+                    <div class="carousel-caption d-block">
+                        <h5 class="chamadabotao">Estilo nas Ruas e Poder no Visual</h5>
+                        <button type="button" class="btn btn-secondary btn-lg botaohome"><a href="@Url.Action("Index", "Products")">VER MAIS</a></button>
+                    </div>
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
@@ -35,6 +75,7 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
+            
         </div>
     </main>
 
