Adicionado link Index/Home ao botão de logo

--- a/PegadaChave/Views/Shared/_Layout.cshtml
+++ b/PegadaChave/Views/Shared/_Layout.cshtml
@@ -26,12 +26,12 @@
             <div class="nav-row logo-row">
                 <div class="blank"></div>
                 <div class="logo">
-                    <a href="">
+                    <a href="@Url.Action("Index", "Home")">
                         <img src="~/Content/Image/ImagemAuxiliarProjeto/logoextenso.png" alt="Logo do site">
                     </a>
                 </div>
                 <div class="logo1">
-                    <a href="">
+                    <a href="@Url.Action("Index", "Home")">
                         <img src="~/Content/Image/ImagemAuxiliarProjeto/logo.png" alt="Logo do site">
                     </a>
                 </div>
