Adição de redirecionamento nas imagens de produto, implementação da lógica e funcionalidades da página de detalhes do produto

--- a/PegadaChave/Views/ProductDetail/Index.cshtml
+++ b/PegadaChave/Views/ProductDetail/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using System.Linq
+
 @{
     ViewBag.Title = "Detalhe do produto";
 }
@@ -9,7 +10,7 @@
     <div class="produto">
         <div class="area-foto">
             <div class="produto-foto">
-                <img src="~/Content/Image/ImagemAuxiliarProjeto/BlusinhaBrancaPrada.jpg" />
+                <img src="@Url.Content(@Model.Item1.ImagemProduto)" />
             </div>
             <div class="botao-fav">
                 <a href="">
@@ -19,11 +20,11 @@
         </div>
         <div class="info-produto">
             <div class="info-row prod-title">
-                <h2>Camisa branca</h2>
-                <p>R$99,90</p>
+                <h2>@Model.Item1.NomeProduto</h2>
+                <p>@Model.Item1.PrecoProduto</p>
             </div>
             <div class="info-row prod-size">
-                <p>Tamanho: M</p>
+                <p>Tamanho: @Model.Item1.TamanhoProduto</p>
                 <a href="">Guia de medidas</a>
             </div>
             <div class="info-row prod-carrinho">
@@ -31,28 +32,28 @@
             </div>
         </div>
     </div>
-    <div class="outros-produtos">
-        <h2>Outros produtos</h2>
-        <div class="o-produtos">
-            <div class="o-produto">
-                <a href="">
-                    <img src="~/Content/Image/ImagemAuxiliarProjeto/CamisaAmarelaNike.jpg" />
-                    <h3>Camisa Amarela da Nike</h3>
-                    <p>R$49,90</p>
-                </a>
-            </div>
-            <div class="o-produto">
-                <a href="">
-                    <img src="~/Content/Image/ImagemAuxiliarProjeto/JaquetaBrancaAdidas.jpg" />
-                    <h3>Jaqueta Branca da Adidas</h3>
-                    <p>R$69,90</p>
-                </a>
-            </div>
-            <div class="o-produto">
-                <a href="">
-                    <img src="~/Content/Image/ImagemAuxiliarProjeto/MoletomMarromLouisvuitton.jpg" />
-                    <h3>Moletom Marrom da Louis Vuitton</h3>
-                    <p>R$99,90</p>
+            <div class="outros-produtos">
+                <h2>Outros produtos</h2>
+                <div class="o-produtos">
+                    @{
+                        int contador = 0;
+                        foreach (var produto in Model.Item2)
+                        {
+                            if (contador >= 3)
+                            {
+                                break;
+                            }
+                            <div class="o-produto">
+                                <a href="@Url.Action("Index", "ProductDetail", new { id = produto.IdProduto })">
+                                    <img src="@Url.Content(@produto.ImagemProduto)" />
+                                    <h3>@produto.NomeProduto</h3>
+                                    <p>@produto.PrecoProduto</p>
+                                </a>
+                            </div>
+                            contador++;
+                        }
+                    }
+                </div>
                 </a>
             </div>
         </div>
